dovecot/dovecot-pigeonhole/tests/extensions/include/errors/scriptname.sieve
require "variables";
require "include";
require "encoded-character";

# Slash
include "../frop";

# More slashes
include "../../james/sieve/vacation";

# 0000-001F; [CONTROL CHARACTERS]
include "idiotic${unicode: 001a}";

# 007F; DELETE
include "idiotic${unicode: 007f}";

# 0080-009F; [CONTROL CHARACTERS]
include "idiotic${unicode: 0085}";

# 2028; LINE SEPARATOR
include "idiotic${unicode: 2028}";

# 2029; PARAGRAPH SEPARATOR
include "idiotic${unicode: 2029}";

